hands-on/phase5/k8s-todo/manifests/dev/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api-service
spec:
  selector:
    app: todo-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
    nodePort: 30500
  type: NodePort
